form button z-index fix

--- a/_postcss/2_components/formelements.css
+++ b/_postcss/2_components/formelements.css
@@ -1,6 +1,6 @@
 .button {
   position: relative;
-  z-index: 3;
+  z-index: 2;
   display: block;
   min-width: 80%;
   margin: 0 auto;
